增加新的任务模型

--- a/notebooks/RF_2.ipynb
+++ b/notebooks/RF_2.ipynb
@@ -69,7 +69,7 @@
     "RANDOM_STATE = 42\n",
     "TEST_SIZE = 0.2\n",
     "\n",
-    "TARGET_COL = \"PLT 减少事件分组\"\n",
+    "TARGET_COL = \"PLT 严重程度分组\"\n",
     "DATA_PATH = \"../data/PLTdataset.xlsx\"\n",
     "SHEET_NAME = \"血小板减少预测\""
    ]
@@ -383,9 +383,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DROP_COLS = [\"样本名称\", \"PLT count(0,>100,1,<100)\", \"PLT 严重程度分组\", \"Gender（女，0；男，1）\", \"动脉血栓（有1，无0）\", TARGET_COL]\n",
+    "DROP_COLS = [\"样本名称\", \"PLT count(0,>100,1,<100)\", \"PLT 减少事件分组\", \"Gender（女，0；男，1）\", \"动脉血栓（有1，无0）\", TARGET_COL]\n",
     "X = df.drop(columns=DROP_COLS)\n",
-    "y = df[TARGET_COL]"
+    "y = df[TARGET_COL].astype(int)  # 多分类强制转换为整数类型"
    ]
   },
   {
@@ -583,13 +583,15 @@
     }
    ],
    "source": [
+    "# 多分类指标计算\n",
     "metrics = {\n",
     "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
-    "    \"precision\": precision_score(y_test, y_pred),\n",
-    "    \"recall\": recall_score(y_test, y_pred),\n",
-    "    \"f1\": f1_score(y_test, y_pred),\n",
-    "    \"roc_auc\": roc_auc_score(y_test, y_prob),\n",
-    "    \"pr_auc\": average_precision_score(y_test, y_prob)\n",
+    "    \"precision\": precision_score(y_test, y_pred, average='weighted'), # 必须加 average\n",
+    "    \"recall\": recall_score(y_test, y_pred, average='weighted'),       # 必须加 average\n",
+    "    \"f1\": f1_score(y_test, y_pred, average='weighted'),               # 必须加 average\n",
+    "    # ROC_AUC 需要概率矩阵，且指定多分类策略\n",
+    "    \"roc_auc\": roc_auc_score(y_test, y_prob, multi_class='ovr', average='weighted'), \n",
+    "    # PR_AUC 在多分类中通常不直接支持，需要二值化标签或移除，这里建议暂时移除或仅看 F1\n",
     "}\n",
     "\n",
     "metrics_df = pd.DataFrame(metrics, index=[\"RandomForest\"])\n",
