--- a/notebooks/LGBM_3.ipynb
+++ b/notebooks/LGBM_3.ipynb
@@ -67,7 +67,7 @@
     "RANDOM_STATE = 42\n",
     "TEST_SIZE = 0.2\n",
     "\n",
-    "TARGET_COL = \"PLT 严重程度分组\"\n",
+    "TARGET_COL = \"PLT 减少事件分组\"\n",
     "DATA_PATH = \"../data/PLTdataset.xlsx\"\n",
     "SHEET_NAME = \"血小板减少预测\""
    ]
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DROP_COLS = [\"样本名称\", \"PLT count(0,>100,1,<100)\", \"PLT 减少事件分组\", \"Gender（女，0；男，1）\", \"动脉血栓（有1，无0）\", TARGET_COL]\n",
+    "DROP_COLS = [\"样本名称\", \"PLT count(0,>100,1,<100)\", \"PLT 严重程度分组\", \"Gender（女，0；男，1）\", \"动脉血栓（有1，无0）\", TARGET_COL]\n",
     "X = df.drop(columns=DROP_COLS)\n",
     "y = df[TARGET_COL]"
    ]
@@ -438,7 +438,7 @@
     "\n",
     "X = X.dropna()\n",
     "y = y.loc[X.index]\n",
-    "y = y.astype(int)  # 多分类强制转换为整数类型\n",
+    "\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
     "print(\"Feature shape after encoding:\", X.shape)"
    ]
@@ -488,8 +488,6 @@
     "    n_estimators=200,\n",
     "    learning_rate=0.05,\n",
     "    class_weight=\"balanced\",\n",
-    "    objective=\"multiclass\",      # 设置为多分类\n",
-    "    num_class=3,                 # 指定类别数\n",
     "    random_state=RANDOM_STATE\n",
     ")"
    ]
@@ -742,7 +740,7 @@
    "outputs": [],
    "source": [
     "y_pred = model.predict(X_test)\n",
-    "y_prob = model.predict_proba(X_test) # 不要加 [:, 1]"
+    "y_prob = model.predict_proba(X_test)[:, 1]"
    ]
   },
   {
@@ -805,15 +803,13 @@
     }
    ],
    "source": [
-    "# 多分类指标计算\n",
     "metrics = {\n",
     "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
-    "    \"precision\": precision_score(y_test, y_pred, average='weighted'), # 必须加 average\n",
-    "    \"recall\": recall_score(y_test, y_pred, average='weighted'),       # 必须加 average\n",
-    "    \"f1\": f1_score(y_test, y_pred, average='weighted'),               # 必须加 average\n",
-    "    # ROC_AUC 需要概率矩阵，且指定多分类策略\n",
-    "    \"roc_auc\": roc_auc_score(y_test, y_prob, multi_class='ovr', average='weighted'), \n",
-    "    # PR_AUC 在多分类中通常不直接支持，需要二值化标签或移除，这里建议暂时移除或仅看 F1\n",
+    "    \"precision\": precision_score(y_test, y_pred),\n",
+    "    \"recall\": recall_score(y_test, y_pred),\n",
+    "    \"f1\": f1_score(y_test, y_pred),\n",
+    "    \"roc_auc\": roc_auc_score(y_test, y_prob),\n",
+    "    \"pr_auc\": average_precision_score(y_test, y_prob)\n",
     "}\n",
     "\n",
     "metrics_df = pd.DataFrame(metrics, index=[\"LightGBM\"])\n",
@@ -979,10 +975,10 @@
     }
    ],
    "source": [
-    "metrics_df.to_csv(\"../outputs/lgbm_metrics_02.csv\")\n",
-    "feat_imp.to_csv(\"../outputs/lgbm_feature_importance_02.csv\")\n",
+    "metrics_df.to_csv(\"../outputs/lgbm_metrics_03.csv\")\n",
+    "feat_imp.to_csv(\"../outputs/lgbm_feature_importance_03.csv\")\n",
     "\n",
-    "plt.savefig(\"../outputs/lgbm_feature_importance_02.png\", dpi=300)"
+    "plt.savefig(\"../outputs/lgbm_feature_importance_03.png\", dpi=300)"
    ]
   },
   {
