--- a/notebooks/XGB_2.ipynb
+++ b/notebooks/XGB_2.ipynb
@@ -404,7 +404,7 @@
    "source": [
     "DROP_COLS = [\"样本名称\", \"PLT count(0,>100,1,<100)\", \"PLT 减少事件分组\", \"Gender（女，0；男，1）\", \"动脉血栓（有1，无0）\", TARGET_COL]\n",
     "X = df.drop(columns=DROP_COLS)\n",
-    "y = df[TARGET_COL].astype(int)  # 多分类强制转换为整数类型"
+    "y = df[TARGET_COL]"
    ]
   },
   {
@@ -419,7 +419,7 @@
     "\n",
     "X = X.dropna()\n",
     "y = y.loc[X.index]\n",
-    "\n",
+    "y = y.astype(int)  # 多分类强制转换为整数类型\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
     "print(\"Feature shape after encoding:\", X.shape)"
    ]
@@ -576,10 +576,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_df.to_csv(\"../outputs/xgb_metrics.csv\")\n",
-    "feat_imp.to_csv(\"../outputs/xgb_feature_importance.csv\")\n",
+    "metrics_df.to_csv(\"../outputs/xgb_metrics_02.csv\")\n",
+    "feat_imp.to_csv(\"../outputs/xgb_feature_importance_02.csv\")\n",
     "\n",
-    "plt.savefig(\"../outputs/xgb_feature_importance.png\", dpi=300)"
+    "plt.savefig(\"../outputs/xgb_feature_importance_02.png\", dpi=300)"
    ]
   },
   {
