--- a/notebooks/LR_2.ipynb
+++ b/notebooks/LR_2.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## Task\n",
     "- Binary classification\n",
-    "- Target: PLT reduction (0 = normal, 1 = reduced)\n",
+    "- Target: PLT reduction (0 = normal, 1 = medium, 2 = severe)\n",
     "\n",
     "## Model\n",
     "- LogisticRegression Classifier (sklearn)\n",
@@ -20,7 +20,6 @@
     "- Recall\n",
     "- F1-score\n",
     "- ROC-AUC\n",
-    "- PR-AUC\n",
     "\n",
     "## Notes\n",
     "This notebook serves as the comparison model."
