--- a/notebooks/LGBM_2.ipynb
+++ b/notebooks/LGBM_2.ipynb
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000052 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000050 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 361\n",
@@ -1185,7 +1185,7 @@
        "      <th>LightGBM</th>\n",
        "      <td>0.846154</td>\n",
        "      <td>0.846154</td>\n",
-       "      <td>0.846154</td>\n",
+       "      <td>0.6</td>\n",
        "      <td>0.846154</td>\n",
        "      <td>0.929487</td>\n",
        "    </tr>\n",
@@ -1194,8 +1194,8 @@
        "</div>"
       ],
       "text/plain": [
-       "          accuracy  precision    recall        f1   roc_auc\n",
-       "LightGBM  0.846154   0.846154  0.846154  0.846154  0.929487"
+       "          accuracy  precision  recall        f1   roc_auc\n",
+       "LightGBM  0.846154   0.846154     0.6  0.846154  0.929487"
       ]
      },
      "execution_count": 11,
@@ -1208,7 +1208,7 @@
     "metrics = {\n",
     "    \"accuracy\": accuracy_score(y_test, y_pred),\n",
     "    \"precision\": precision_score(y_test, y_pred, average='weighted'), # 必须加 average\n",
-    "    \"recall\": recall_score(y_test, y_pred, average='weighted'),       # 必须加 average\n",
+    "    \"recall\": recall_score(y_test, y_pred, average='macro'),       # 必须加 average\n",
     "    \"f1\": f1_score(y_test, y_pred, average='weighted'),               # 必须加 average\n",
     "    # ROC_AUC 需要概率矩阵，且指定多分类策略\n",
     "    \"roc_auc\": roc_auc_score(y_test, y_prob, multi_class='ovr', average='weighted'), \n",
@@ -1266,25 +1266,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 65288 (\\N{FULLWIDTH LEFT PARENTHESIS}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 65288 (\\N{FULLWIDTH LEFT PARENTHESIS}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 65289 (\\N{FULLWIDTH RIGHT PARENTHESIS}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 65289 (\\N{FULLWIDTH RIGHT PARENTHESIS}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 65292 (\\N{FULLWIDTH COMMA}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 65292 (\\N{FULLWIDTH COMMA}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 27491 (\\N{CJK UNIFIED IDEOGRAPH-6B63}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 27491 (\\N{CJK UNIFIED IDEOGRAPH-6B63}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 24120 (\\N{CJK UNIFIED IDEOGRAPH-5E38}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 24120 (\\N{CJK UNIFIED IDEOGRAPH-5E38}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 33539 (\\N{CJK UNIFIED IDEOGRAPH-8303}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 33539 (\\N{CJK UNIFIED IDEOGRAPH-8303}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 22260 (\\N{CJK UNIFIED IDEOGRAPH-56F4}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 22260 (\\N{CJK UNIFIED IDEOGRAPH-56F4}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 33026 (\\N{CJK UNIFIED IDEOGRAPH-8102}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 33026 (\\N{CJK UNIFIED IDEOGRAPH-8102}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 34507 (\\N{CJK UNIFIED IDEOGRAPH-86CB}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 34507 (\\N{CJK UNIFIED IDEOGRAPH-86CB}) missing from current font.\n",
       "  plt.tight_layout()\n",
-      "/tmp/ipykernel_857/2996859983.py:10: UserWarning: Glyph 30333 (\\N{CJK UNIFIED IDEOGRAPH-767D}) missing from current font.\n",
+      "/tmp/ipykernel_839/2996859983.py:10: UserWarning: Glyph 30333 (\\N{CJK UNIFIED IDEOGRAPH-767D}) missing from current font.\n",
       "  plt.tight_layout()\n",
       "/root/miniconda3/lib/python3.8/site-packages/IPython/core/pylabtools.py:151: UserWarning: Glyph 65288 (\\N{FULLWIDTH LEFT PARENTHESIS}) missing from current font.\n",
       "  fig.canvas.print_figure(bytes_io, **kw)\n",
