--- a/notebooks/SVM_3.ipynb
+++ b/notebooks/SVM_3.ipynb
@@ -5,11 +5,11 @@
    "id": "9eaa810e",
    "metadata": {},
    "source": [
-    "# SVM for PLT Reduction Prediction\n",
+    "# SVM for 血栓 Reduction Prediction\n",
     "\n",
     "## Task\n",
     "- Binary classification\n",
-    "- Target: PLT reduction (0 = normal, 1 = reduced)\n",
+    "- Target: 血栓 reduction (0 = 无, 1 = 有)\n",
     "\n",
     "## Model\n",
     "- SVM Classifier (sklearn)\n",
