--- a/notebooks/LGBM_2.ipynb
+++ b/notebooks/LGBM_2.ipynb
@@ -432,6 +432,7 @@
     "y = y.loc[X.index]\n",
     "y = y.astype(int)  # 多分类强制转换为整数类型\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
+    "X = X.astype(float)\n",
     "print(\"Feature shape after encoding:\", X.shape)"
    ]
   },
@@ -1323,7 +1324,10 @@
     "plt.title(\"Top 20 Feature Importances (LightGBM)\")\n",
     "plt.xlabel(\"Importance\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"\\nTop 10 Important Features:\")\n",
+    "print(feat_imp.head(10))"
    ]
   },
   {
