--- a/notebooks/XGB_2.ipynb
+++ b/notebooks/XGB_2.ipynb
@@ -38,9 +38,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, cross_val_predict, StratifiedKFold, LeaveOneOut\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.feature_selection import SelectKBest, f_classif\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score,\n",
     "    precision_score,\n",
@@ -432,6 +434,7 @@
     "y = y.loc[X.index]\n",
     "y = y.astype(int)  # 多分类强制转换为整数类型\n",
     "X = pd.get_dummies(X, drop_first=True)\n",
+    "X = X.astype(float)\n",
     "print(\"Feature shape after encoding:\", X.shape)"
    ]
   },
@@ -451,22 +454,22 @@
     }
    ],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X,\n",
-    "    y,\n",
-    "    test_size=TEST_SIZE,\n",
-    "    random_state=RANDOM_STATE,\n",
-    "    stratify=y\n",
-    ")\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(\n",
+    "#     X,\n",
+    "#     y,\n",
+    "#     test_size=TEST_SIZE,\n",
+    "#     random_state=RANDOM_STATE,\n",
+    "#     stratify=y\n",
+    "# )\n",
     "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
+    "# from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "scaler = StandardScaler()\n",
-    "X_train = scaler.fit_transform(X_train)\n",
-    "X_test = scaler.transform(X_test)\n",
+    "# scaler = StandardScaler()\n",
+    "# X_train = scaler.fit_transform(X_train)\n",
+    "# X_test = scaler.transform(X_test)\n",
     "\n",
-    "print(\"Train:\", X_train.shape)\n",
-    "print(\"Test:\", X_test.shape)"
+    "# print(\"Train:\", X_train.shape)\n",
+    "# print(\"Test:\", X_test.shape)"
    ]
   },
   {
@@ -476,17 +479,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = XGBClassifier(\n",
-    "    n_estimators=200,\n",
-    "    max_depth=3,\n",
-    "    learning_rate=0.05,\n",
-    "    subsample=0.8,\n",
-    "    colsample_bytree=0.8,\n",
-    "    objective=\"multi:softprob\",  # 修改目标函数为多分类概率\n",
-    "    num_class=3,                 # 必须指定类别数量\n",
-    "    eval_metric=\"mlogloss\",      # 修改评估指标为多分类对数损失\n",
-    "    random_state=RANDOM_STATE\n",
-    ")"
+    "# model = XGBClassifier(\n",
+    "#     n_estimators=200,\n",
+    "#     max_depth=3,\n",
+    "#     learning_rate=0.05,\n",
+    "#     subsample=0.8,\n",
+    "#     colsample_bytree=0.8,\n",
+    "#     objective=\"multi:softprob\",  # 修改目标函数为多分类概率\n",
+    "#     num_class=3,                 # 必须指定类别数量\n",
+    "#     eval_metric=\"mlogloss\",      # 修改评估指标为多分类对数损失\n",
+    "#     random_state=RANDOM_STATE\n",
+    "# )"
    ]
   },
   {
@@ -540,7 +543,38 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train)"
+    "# model.fit(X_train, y_train)\n",
+    "\n",
+    "xgb_pipe = Pipeline([\n",
+    "    ('scaler', StandardScaler()), \n",
+    "    ('xgb', XGBClassifier(\n",
+    "        eval_metric=\"logloss\", \n",
+    "        use_label_encoder=False, \n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])\n",
+    "\n",
+    "param_grid_xgb = {\n",
+    "    'xgb__max_depth': [1, 2, 3],       # 小样本树要浅\n",
+    "    'xgb__n_estimators': [5, 10, 20, 50], # 树的数量\n",
+    "    'xgb__learning_rate': [0.01, 0.05, 0.1],\n",
+    "    'xgb__reg_alpha': [0, 0.1, 1],     # L1 正则化抗过拟合\n",
+    "    'xgb__subsample': [0.8, 1.0]       # 每次训练随机抽样比例\n",
+    "}\n",
+    "\n",
+    "cv_5fold = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator=xgb_pipe,\n",
+    "    param_grid=param_grid_xgb,\n",
+    "    cv=cv_5fold,\n",
+    "    scoring='f1',\n",
+    "    n_jobs=1\n",
+    ")\n",
+    "grid_search.fit(X, y)\n",
+    "model = grid_search.best_estimator_\n",
+    "print(\"5-Fold 最佳 F1:\", grid_search.best_score_)\n",
+    "print(\"5-Fold 最佳参数:\", grid_search.best_params_)"
    ]
   },
   {
@@ -550,8 +584,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = model.predict(X_test)\n",
-    "y_prob = model.predict_proba(X_test) # 不要加 [:, 1]"
+    "# y_pred = model.predict(X_test)\n",
+    "# y_prob = model.predict_proba(X_test) # 不要加 [:, 1]\n",
+    "\n",
+    "loo = LeaveOneOut()\n",
+    "\n",
+    "y_probas_loo = cross_val_predict(model, X, y, cv=loo, method='predict_proba')\n",
+    "# 使用 argmax 选出概率最大的类别\n",
+    "y_preds_loo = np.argmax(y_probas_loo, axis=1)"
    ]
   },
   {
@@ -764,7 +804,10 @@
     "plt.title(\"Top 20 Feature Importances (XGBoost)\")\n",
     "plt.xlabel(\"Importance\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "print(\"\\nTop 10 Important Features:\")\n",
+    "print(feat_imp.head(10))"
    ]
   },
   {
