--- a/notebooks/SVM_2.ipynb
+++ b/notebooks/SVM_2.ipynb
@@ -511,14 +511,14 @@
     "    'svm__gamma': ['scale', 'auto']\n",
     "}\n",
     "\n",
-    "# 使用分层5折 (StratifiedKFold) 保证每折都有正负样本，这样才能算 AUC\n",
+    "# 使用分层5折 (StratifiedKFold) 保证每折都有正负样本\n",
     "cv_5fold = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
     "\n",
     "grid_search = GridSearchCV(\n",
     "    estimator=svm_pipe,\n",
     "    param_grid=param_grid_svm,\n",
-    "    cv=cv_5fold,       # 这里用 5折\n",
-    "    scoring='f1_macro', # 这里就可以大胆用 roc_auc 了！\n",
+    "    cv=cv_5fold,\n",
+    "    scoring='f1_macro',\n",
     "    n_jobs=-1\n",
     ")\n",
     "\n",
